--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <h2>Hello! this is Overmind sample static website.</h2>
+    <h2>Hello! this is Overmind sample static website!!</h2>
 </body>
 
 </html>
